improved kata section

--- a/kata.html
+++ b/kata.html
@@ -66,10 +66,12 @@
 								<div class="col-12">
 									<h2 class="text-start">Heian Nidan</h2>
 									<p class="text-start h3">	
-										Heian Nidan (Peaceful Mind, level two) is the second form teached of the Heian series. This form has 26 movements and it introduces several movement patterns such as the back of forearm block/forearm 
-										forehead posture (haiwan-uke/zenwan-hitae-kamae), outside flowing block /outside hammer-fist strike (soto-nagashi uke /zentsui-soto-mawashi-uchi), side punch (sokumen-zuki), fist to hip posture with side kick and punch 
-										(ryoken-koshi-kamae and uraken-yoko-mawashi-uuchi/yoko-geri-keage), spear hand with pressing block (shihon-tate-nukite / osae-uke), semi front stance (ashi/hanmi zenkutsu dachi), 
-										and front kick (mae geri). Kiai are traditionally performed at movement 11# and 26#.
+										Heian Nidan, also known as Peaceful Mind Level Two, is the second form taught in the Heian series. This form consists of 26 movements and introduces various movement patterns. 
+										For example, it includes the back of forearm block/forearm forehead posture (haiwan-uke/zenwan-hitae-kamae), outside flowing block/outside hammer-fist strike (soto-nagashi uke/zentsui-soto-mawashi-uchi), 
+										side punch (sokumen-zuki), and fist to hip posture with side kick and punch (ryoken-koshi-kamae and uraken-yoko-mawashi-uuchi/yoko-geri-keage). Additionally, it features a spear hand with pressing block 
+										(shihon-tate-nukite/osae-uke), semi-front stance (ashi/hanmi zenkutsu dachi), and front kick (mae geri).
+
+										Moreover, Heian Nidan introduces a new stepping pattern in the half-step before the first kick. It is important to note that traditional kiai are performed at movements 11# and 26#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/it6ubfO2LnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
