--- a/kata.html
+++ b/kata.html
@@ -25,6 +25,9 @@
 							<li class="nav-item">
 								<a class="nav-link active" href="kata.html"><span class="h1">Kata</span></a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="primer.html"><span class="h1">Primer</span></a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -43,7 +46,7 @@
 									<p class="text-start h3">										
 										Taikyoku Shodan is a basic form in Shotokan Karate that helps beginners learn the fundamental aspects of the martial art. This form consists of 20 moves and emphasizes the importance of the Karate maxim, "In Karate, there is no advantage in the first attack". 
 										The form includes down blocks (gedan-barai), body lunge punches (chudan oi-tzuki), and forward stances (zenkutsu dachi). Traditionally, "shouts" (Kiai) are performed at movements 8# and 16#.
-										During practice, the focus should be on achieving deep, stable, and correct stances, throwing precise and consistent punches at the imaginary enemy's solar plexus, 
+										During practice, the focus should be on achieving deep, stable, and correct stances, throwing precise and consistent punches at the imaginary aggressor's solar plexus, 
 										and maintaining sufficient stance width throughout the kata. Most moves are executed one beat at a time, except for two sequences of three punches where there is only one half-beat between the second and third punches.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
@@ -53,10 +56,10 @@
 								<div class="col-12">
 									<h2 class="text-start">Heian Shodan</h2>
 									<p class="text-start h3">	
-										Heian Shodan is the first form in the Heian series of karate, teaching practitioners 21 movements. It is very similar to the Taikyoku series, but includes additional techniques such as the vertical hammer-fist 
-										strike (kentsui-tate-mawashi-uchi), rising block (age-uke), knife-hand block (shuto-uke), and back-stance (kokutsu-dachi). The form also introduces back-stance, with a focus on differentiating clearly between 
+										Heian Shodan is the first form in the Heian series and it is made of 21 movements. Very similar to the Taikyoku series, but includes additional techniques such as the vertical hammer-fist 
+										strike (kentsui-tate-mawashi-uchi), rising block (age-uke), knife-hand block (shuto-uke), and back-stance (kokutsu-dachi). This form introduces back-stance, and practicioners should focus on differentiating clearly between 
 										front and back stance. Heian Shodan also includes several self-defense techniques, such as escaping from a wrist grab and breaking an elbow joint.
-										Like Taikyoku, most movements are separated by one beat, except for the half beat between the second and third age-uke and the second and third oi-tsuki. 
+										Like Taikyoku, most movements are separated by one beat, except for the half beat between the second and third age-uke and the second and third oi-tsuki.
 										Kiai are traditionally performed at movement 9# and 17#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
@@ -67,11 +70,11 @@
 									<h2 class="text-start">Heian Nidan</h2>
 									<p class="text-start h3">	
 										Heian Nidan, also known as Peaceful Mind Level Two, is the second form taught in the Heian series. This form consists of 26 movements and introduces various movement patterns. 
-										For example, it includes the back of forearm block/forearm forehead posture (haiwan-uke/zenwan-hitae-kamae), outside flowing block/outside hammer-fist strike (soto-nagashi uke/zentsui-soto-mawashi-uchi), 
-										side punch (sokumen-zuki), and fist to hip posture with side kick and punch (ryoken-koshi-kamae and uraken-yoko-mawashi-uuchi/yoko-geri-keage). Additionally, it features a spear hand with pressing block 
-										(shihon-tate-nukite/osae-uke), semi-front stance (ashi/hanmi zenkutsu dachi), and front kick (mae geri).
+										It includes the back of forearm block/forearm forehead posture (haiwan-uke/zenwan-hitae-kamae), outside flowing block/outside hammer-fist strike (soto-nagashi uke/zentsui-soto-mawashi-uchi), 
+										side punch (sokumen-zuki), and fist to hip posture with side kick and punch (ryoken-koshi-kamae and uraken-yoko-mawashi-uuchi/yoko-geri-keage). 
+										Additionally, it features a spear hand with pressing block (shihon-tate-nukite/osae-uke), semi-front stance (ashi/hanmi zenkutsu dachi), and front kick (mae geri).
 
-										Moreover, Heian Nidan introduces a new stepping pattern in the half-step before the first kick. It is important to note that traditional kiai are performed at movements 11# and 26#.
+										Moreover, Heian Nidan introduces a new stepping pattern in the half-step before the first kick. Traditionally, shouts are performed at movements 11# and 26#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/it6ubfO2LnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -80,8 +83,8 @@
 								<div class="col-12">
 									<h2 class="text-start">Heian Sandan</h2>
 									<p class="text-start h3">	
-										Heian Sandan (Peaceful Mind, level three) is the third form teached of the Heian series. This form has 20 movements and it introduces several movement patterns such as the horse stance (kiba dachi), body shifting (tai sabaki),
-										elbow strikes (empi). This is the first kata that contains slow moments.
+										Heian Sandan (Peaceful Mind, level three) is the third form teached of the Heian series. This form has 20 movements and it introduces several moves such as the horse stance (kiba dachi), body shifting (tai sabaki),
+										elbow strikes (empi). This is the first kata that contains slow and fast moments.
 										Kiai are traditionally performed at movement 10# and 20#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
@@ -92,7 +95,7 @@
 									<h2 class="text-start">Heian Yondan</h2>
 									<p class="text-start h3">	
 										Heian Yondan (Peaceful Mind, level four) is the fourth form teached of the Heian series. This form has 27 movements and it primarily based on kokutsu-dachi and the cross stance (kosa-dachi).
-										Kiai are traditionally performed at movement 13# and 25#.
+										Kiai are traditionally performed at movement 13# and 25#. In this kata, the difference between slow and fast movements should be emphasized greatly.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/TAoHIjknCeA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -123,13 +126,26 @@
 									<h2 class="text-start">Bassai Dai</h2>
 									<p class="text-start h3">	
 										Bassai Dai (To breach the fortress) is the first of the sentei kata (a series that exemplify Shotokan strong yet huble nature). 
-										This form has 42 movements and it's primary purpose is that of showing power and intensity.
+										This form has 42 movements and its primary purpose is that of showing power and intensity.
 										Kiai are traditionally performed at movement 19# and 42#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/jbR8wxiMsZo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 									</div>
 								</div>
+								<div class="col-12">
+									<h2 class="text-start">Sochin</h2>
+									<p class="text-start h3">	
+										Sochin ("Strength and Calm") belongs to the sentei kata. Sochin is a bold kata marked by a commanding physical and spiritual strenght. This kata is heavily based on fudo-dachi ("immovable stance").
+										Sochink trademark is also the muso-kamae (a combination of rising blocck and down block). Sochin has been revised to have 41 moves, with kiai on movement 30 and 41.
+									</p>
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/Mb35aEO8eos" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+									</div>
+								</div>
+
+								
+
 							</div>
 						</div>
 					</div>
