--- a/info.html
+++ b/info.html
@@ -25,6 +25,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="kata.html"><span class="h1">Kata</span></a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="primer.html"><span class="h1">Primer</span></a>
+							</li>
 						</ul>
 					</div>
 				</div>
